[gd_scene load_steps=8 format=3 uid="uid://bnk5s8as42mad"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_k58xr"]
[ext_resource type="Texture2D" uid="uid://dl8vxdrvmqn7l" path="res://Assets/Textures/main_menu_bg.png" id="2_co0ax"]
[ext_resource type="VideoStream" path="res://Assets/0001-0042.ogv" id="3_eanri"]

[sub_resource type="Animation" id="Animation_ssrie"]
resource_name = "fade-in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vj6ro"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_482q6"]
resource_name = "fade-out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mlb5f"]
_data = {
"RESET": SubResource("Animation_vj6ro"),
"fade-in": SubResource("Animation_ssrie"),
"fade-out": SubResource("Animation_482q6")
}

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_k58xr")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_co0ax")
expand_mode = 1
stretch_mode = 6

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -161.0
offset_top = 28.0
offset_right = 176.0
offset_bottom = 103.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 24
text = "Begin the adventure"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -207.0
offset_top = 133.0
offset_right = 227.0
offset_bottom = 209.0
grow_horizontal = 2
grow_vertical = 2

[node name="CheckButton" type="CheckButton" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 9.0
offset_right = -12.0
offset_bottom = -14.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/font_size = 24
text = "Disable snow (if the game lags)"

[node name="Fading" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mlb5f")
}
autoplay = "fade-in"

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 192.0
offset_top = 67.0
offset_right = 192.0
offset_bottom = 355.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.722989, 0.545664)
stream = ExtResource("3_eanri")
autoplay = true

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="toggled" from="Panel/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="finished" from="VideoStreamPlayer" to="." method="_on_video_stream_player_finished"]
